# research

./: .gitignore  deep_research_report_flow.md  generate_agentic_rag_docx.py  mvp_agentic_rag_implementation_plan.docx  new_agentic_rag_blueprint_ccfa.md  工程伦理期末论文.docx
mvp_agentic_rag/: .env.example  .gitignore  CANDIDATE_BOARD.md  CHECKLIST.md  OPTIMIZE_CHECKLIST.md  PLAN.md  README.md  pyproject.toml  run_decomp30.cmd  run_decomp_gate30.cmd  run_decomp_gate300.cmd  run_decomp_gate_memory30.cmd  run_oracle30.cmd  run_rerank30.cmd
mvp_agentic_rag/analysis/: arizona_granularity_audit_20260713.md  checklist_clean_v2_multiquery_fixed_vs_clean_diagnostic.json  checklist_clean_v2_multiquery_production_fix_diagnostic.json  checklist_clean_v2_multiquery_projected_evidence_gain_diagnostic.json  checklist_clean_v2_multiquery_projected_waste_diagnostic.json  checklist_clean_v2_multiquery_question_backfill_diagnostic.json  checklist_clean_v2_multiquery_question_backfill_projected_gain_diagnostic.json  checklist_clean_v2_multiquery_question_variant_diagnostic.json  checklist_clean_v2_multiquery_variant_diagnostic.json  checklist_clean_v2_query_variant_diagnostic.json  checklist_clean_v2_retrieval_only_diagnostic.json  checklist_repeat_no_gain_stop_replay_diagnostic.json  malformed_topology_targeted2_checklist_20260713_r13.md  malformed_topology_targeted2_plan_20260713_r13.md  monotonic_slot_state_stratified45_results_20260712.md  monotonic_slot_state_stratified45_run_contract_20260712.md  musique_2hop_proxy_diagnostic_20260710.md  musique_2hop_proxy_frozen_test_20260711.md  (+142 more)
(+1404 files in other folders)
