[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp-agentic-rag"
version = "0.1.0"
description = "Functionally equivalent MVP reconstruction for claim-level risk-calibrated Agentic RAG."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
